# hasherBenchmarker

./: .gitignore  CMakeLists.txt  README.md  config.json  main.py  metadata.json
UMLplant/: Benchmark.puml  BenchmarkFactory.puml  Result.puml  Test.puml  TestDescriptor.puml  std_unordered_map.puml  structure.puml  whole_structure.puml
benchmarker/: Benchmark.cpp  Benchmark.hpp  BenchmarkFactory.cpp  BenchmarkFactory.hpp  CMakeLists.txt  Generators.cpp  Generators.hpp  Result.cpp  Result.hpp  Test.hpp  generators.hpp  main.cpp
configs/: int-config.json  ptr-config.json  str-config.json
hasherLib/: CMakeLists.txt  general_purpose_hashers.hpp  hasherUtils.hpp  int_hashers.cpp  int_hashers.hpp  pointer_hasher.hpp  string_hashers.cpp  string_hashers.hpp
