add_executable(hasher-benchmarker)

include(FetchContent)
FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
FetchContent_MakeAvailable(json)
target_link_libraries(hasher-benchmarker PRIVATE nlohmann_json::nlohmann_json)
target_sources(hasher-benchmarker PRIVATE main.cpp Test.hpp Benchmark.cpp Result.cpp Generators.cpp BenchmarkFactory.cpp)
target_compile_options(hasher-benchmarker PRIVATE "-Wall" "-Wextra" "-Wpedantic" "-std=gnu++20")
if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
    target_compile_options(hasher-benchmarker PRIVATE "-O3")
    message("Maximal optimisation")
elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "SmallCode")
    target_compile_options(hasher-benchmarker PRIVATE "-Os")
    message("Small code optimisation")
else ()
    target_compile_options(hasher-benchmarker PRIVATE "-O2" "-g")
    message("Debug optimisation")
endif ()