add_executable(hasher-benchmarker)

include(FetchContent)
FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
FetchContent_MakeAvailable(json)
FetchContent_Declare(uuid_v4 URL https://github.com/crashoz/uuid_v4/archive/refs/tags/v1.0.0.tar.gz)
FetchContent_MakeAvailable(uuid_v4)
target_include_directories(hasher-benchmarker PRIVATE ${uuid_v4_SOURCE_DIR}/include)
target_link_libraries(hasher-benchmarker PRIVATE nlohmann_json::nlohmann_json)
target_sources(hasher-benchmarker PRIVATE main.cpp Test.hpp Benchmark.cpp Result.cpp Generators.cpp BenchmarkFactory.cpp)
target_compile_options(hasher-benchmarker PRIVATE "-Wall" "-Wextra" "-Wpedantic" "-std=gnu++20")
